--- a/output/index.html
+++ b/output/index.html
@@ -1,8 +1,12 @@
 <html>
+<head>
+<link rel="stylesheet" href="/assets/app.css">
+<script type="text/javascript" src="/assets/app.js"></script>
+</head>
   <body>
     
-  <h1>Elmar Ismayil's personal website</h1>
-  <h2>Posts</h2>
+  <h1>Elmar Ismayil's Personal website!!</h1>
+  <h2>Posts!</h2>
   <ul>
     <li>
       <a href="posts/2023/07-10-my-first-post-on-my-personal-web-site.html"> My first post on my personal website </a>
