header classes added

--- a/output/index.html
+++ b/output/index.html
@@ -1,6 +1,16 @@
 <html>
-  <body>
-    
+  <head>
+    <link rel="stylesheet" href="/assets/app.css">
+    <script type="text/javascript" src="/assets/app.js"></script>
+  </head>
+<body>
+<div class="min-h-full">
+<nav class="bg-white">
+  <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
+  header
+  </div>
+</nav>
+
   <h1>Elmar Ismayil's personal website</h1>
   <h2>Posts</h2>
   <ul>
@@ -9,5 +19,6 @@
     </li>
   </ul>
 
+</div>
   </body>
 </html>
