--- a/output/about.html
+++ b/output/about.html
@@ -1,8 +1,19 @@
 <html>
-  <body>
-    
+  <head>
+    <link rel="stylesheet" href="/assets/app.css">
+    <script type="text/javascript" src="/assets/app.js"></script>
+  </head>
+<body>
+<div class="min-h-full">
+<nav class="bg-white">
+  <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
+  header
+  </div>
+</nav>
+
   <h1>About me</h1>
   <p>I am a full stack developer with more than 20 years of experience.</p>
 
+</div>
   </body>
 </html>
